--- a/Style.css
+++ b/Style.css
@@ -1,20 +1,12 @@
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: repeat(8, 1fr);
-    gap: 1px;
+    grid-template-columns: repeat(8, 0fr);
+    grid-template-rows: repeat(8, 0fr);
+    gap: 0px;
 }
 
 .grid-square {
-    width: 50px;
-    height: 50px;
-    background-color: #f0d9b5; /* Light color */
-}
-
-.grid-square:nth-child(even) {
-    background-color: black;
-}
-
-.grid-square:nth-child(odd) {
-    background-color: white;
+    width: 100px;
+    height: 100px;
+    background-color: var(--cell-color);
 }
