--- a/public/Misc/Style.css
+++ b/public/Misc/Style.css
@@ -11,3 +11,7 @@
     background-color: var(--cell-color);
     --notation: var(--cell-notation);
 }
+.selected-game {
+    background-color: #d3d3d3; /* Light gray background */
+    border: 2px solid #000; /* Black border */
+}
